--- a/main.css
+++ b/main.css
@@ -5,28 +5,36 @@
 	background-color: rgb(243, 243, 243);
 	border-radius: 5px;
 	border: 1px solid;
-	padding: 15px;
+	padding: 5%;
 }
 
-p {
-	width: 90%;
+p,h1 {
 	margin: 0;
-	margin-left: auto;
-	margin-right: auto;
 }
+
+h1 {
+	margin-bottom: 10px;
+}
+
 
 .input_button {
-	display: block;
-	width: 90%;
-	
-	margin-left: auto;
-	margin-right: auto;
-	margin-top: 10px;
-	text-align: center;
+	display: inline-block;
+	width: 	30%;
+	height: 40px;
+	border-radius: 10px;
+
+	margin-top: 20px;
 
 	background-color: rgb(133, 82, 252);
 	color: white;
 	border: none;
-	border-radius: 5px;
+	-webkit-appearance: none;
 }
 
+.input {
+	width: 40%;
+	height: 50px;
+	line-height: 50px;
+	text-align: center;
+	margin-right: 10%;
+}
