--- a/main.css
+++ b/main.css
@@ -32,9 +32,9 @@ h1 {
 }
 
 .input {
-	width: 40%;
+	width: 80%;
 	height: 50px;
 	line-height: 50px;
 	text-align: center;
-	margin-right: 10%;
+	/* margin-right: 10%; */
 }
